[tool.poetry]
name = "qecommon_tools"
version = "2.0.2"
description = "A library for helper functions across QE-Tools designed for larger consumption"
authors = ["Rackspace QE <qe-tools-contributors@rackspace.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifacts.rackspace.net/artifactory/api/pypi/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
wrapt = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pre-commit = "^1.15"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4.3"
ghp-import = "^0.5.5"
requests-mock = "^1.6"
tomlkit = "^0.5.3"
github_tools = "^2.0.1"

[tool.poetry.scripts]
uuid-replacer = 'qecommon_tools.uuid_replacer:main'

[tool.poetry.plugins."tag_to_url"]
JIRA = "qecommon_tools.tag_to_url:JIRA"
SNOW = "qecommon_tools.tag_to_url:SNOW"
VersionOne = "qecommon_tools.tag_to_url:VersionOne"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
