[tool.poetry]
name = "qecommon_tools"
version = "2.0.2"
description = "A library for helper functions across Jolly Good Toolbelt designed for larger consumption"
authors = ["Doug Philips <dgou@mac.com>", "Lewis Franklin <github@brolewis.com>", "Ryan Casperson <casperson.ryan@gmail.com>", "Brad Brown <brad@bradsbrown.com>", "Shawn Dutton <Shawndutton1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
wrapt = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pre-commit = "^1.15"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4.3"
ghp-import = "^0.5.5"
requests-mock = "^1.6"
tomlkit = "^0.5.3"

[tool.poetry.scripts]
uuid-replacer = 'qecommon_tools.uuid_replacer:main'

[tool.poetry.plugins."tag_to_url"]
JIRA = "qecommon_tools.tag_to_url:JIRA"
SNOW = "qecommon_tools.tag_to_url:SNOW"
VersionOne = "qecommon_tools.tag_to_url:VersionOne"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
