[tool.poetry]
name = "jgt_common"
version = "1.0.6"
description = "A library for helper functions across Jolly Good Toolbelt designed for larger consumption"
authors = ["Doug Philips <dgou@mac.com>", "Lewis Franklin <github@brolewis.com>", "Ryan Casperson <casperson.ryan@gmail.com>", "Brad Brown <brad@bradsbrown.com>", "Shawn Dutton <Shawndutton1@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://jolly-good-toolbelt.github.io/jgt_common/"
documentation = "https://jolly-good-toolbelt.github.io/jgt_common/"
repository = "https://github.com/jolly-good-toolbelt/jgt_common"

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"
wrapt = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pre-commit = "^1.15"
sphinx = "^2.0"
sphinx-rtd-theme = "^0.4.3"
ghp-import = "^0.5.5"
requests-mock = "^1.6"
tomlkit = "^0.5.3"

[tool.poetry.scripts]
uuid-replacer = 'jgt_common.uuid_replacer:main'

[tool.poetry.plugins."tag_to_url"]
JIRA = "jgt_common.tag_to_url:JIRA"
SNOW = "jgt_common.tag_to_url:SNOW"
VersionOne = "jgt_common.tag_to_url:VersionOne"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
